--- a/default.conf
+++ b/default.conf
@@ -1,44 +1,45 @@
- 1 server {
-  2     listen       80;
-  3     server_name  localhost;
-  4 
-  5     #charset koi8-r;
-  6     #access_log  /var/log/nginx/log/host.access.log  main;
-  7 
-  8     location / {
-  9         root   /var/www/content/;
- 10         index index.php index.html index.htm;
- 11     }
- 12  
- 13     #error_page  404              /404.html;
- 14 
- 15     # redirect server error pages to the static page /50x.html
- 16     #
- 17     error_page   500 502 503 504  /50x.html;
- 18     location = /50x.html {
- 19         root   /usr/share/nginx/html;
- 20     }
- 21 
- 22     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
- 23     #
- 24     #location ~ \.php$ {
- 25     #    proxy_pass   http://127.0.0.1;
- 26     #}
- 27 
- 28     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
- 29     #
- 30     location ~ \.php$ {
- 31         root           /var/www/content/;
- 32         fastcgi_pass   127.0.0.1:9000;
- 33         fastcgi_index  index.php;
- 34         fastcgi_param  SCRIPT_FILENAME  /var/www/content$fastcgi_script_name;
- 35         include        fastcgi_params;
- 36     }
- 37 
- 38     # deny access to .htaccess files, if Apache's document root
- 39     # concurs with nginx's one
- 40     #
- 41     #location ~ /\.ht {
- 42     #    deny  all;
- 43     #}
- 44 }
+server {
+    listen       80;
+    server_name  localhost;
+
+    #charset koi8-r;
+    #access_log  /var/log/nginx/log/host.access.log  main;
+
+    location / {
+        root   /var/www/content/;
+        index index.php index.html index.htm;
+    }
+
+    #error_page  404              /404.html;
+
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+
+    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
+    #
+    #location ~ \.php$ {
+    #    proxy_pass   http://127.0.0.1;
+    #}
+
+    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+    #
+    location ~ \.php$ {
+        root           /var/www/content/;
+        fastcgi_pass   127.0.0.1:9000;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME  /var/www/content$fastcgi_script_name;
+        include        fastcgi_params;
+    }
+
+    # deny access to .htaccess files, if Apache's document root
+    # concurs with nginx's one
+    #
+    #location ~ /\.ht {
+    #    deny  all;
+    #}
+}
+
